python/src/rabbit/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq  # Should match the headless service name (if used)
  replicas: 1  # Recommended for single-node RabbitMQ
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - name: http
              containerPort: 15672
              protocol: TCP
            - name: amqp
              containerPort: 5672
              protocol: TCP
          volumeMounts:
            - name: rabbitmq-volume
              mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:  # Use this instead of 'volumes' for StatefulSet
    - metadata:
        name: rabbitmq-volume
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: standard
